# aussi

./: .gitignore  CHANGES.md  README.md  aussi.opam  dune-project
.github/workflows/: test.yml
lib/: aussi.ml  cgroup.ml  cgroup.mli  config.ml  config.mli  dune  manifest.ml  manifest.mli  net.ml  net.mli  runtime.ml  runtime.mli  solo5.ml  solo5.mli  state.ml  state.mli
test/: argv.t  block.t  dune  errors.t  lifecycle.t  smoke.t
test/fixtures/: solo5-elftool  solo5-hvt
test/fixtures/bundle/: config.json
test/fixtures/bundle-argv/: config.json
test/fixtures/bundle-argv/rootfs/: solo5.json  unikernel.hvt
test/fixtures/bundle-block/: config.json
test/fixtures/bundle-block/rootfs/: solo5.json
