opam-version: "2.0"
name: "aussi"
synopsis: "OCI runtime for Solo5 unikernels"
license: "MIT"
maintainer: "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors: ["Romain Calascibetta <romain.calascibetta@gmail.com>"]
depends: [
  "ocaml" {>= "5.0"}
  "dune" {>= "3.0"}
  "jsont" {>= "0.2.0"}
  "bytesrw" {>= "0.2.0"}
  "cmdliner" {>= "2.1.0"}
  "solo5"
  "logs"
  "fmt"
  "ptime"
  "macaddr"
  "ipaddr"
  "fpath"
  "bos"
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["sh" "-ex" "dist/debian/create_package.sh"] {os-family = "debian" | os-family = "ubuntu"}
]
